added b2a output input back

--- a/templates/B2A.html
+++ b/templates/B2A.html
@@ -6,7 +6,7 @@
 
 {% block main %}
 <fieldset class="container p-3">
-    
+    <legend class="float-none w-auto px-3 in1">Input</legend>
     <form action="/B2A" method="post">
         <div class="mb-3">
             <input autocomplete="off" class="text_field form-control mx-auto w-auto" id="basic" name="basic" placeholder="Input Basic Here" type="text">
@@ -18,7 +18,7 @@
 <br />
 
 <fieldset class="container p-3">
-    
+    <legend class="float-none w-auto px-3 outtxt">Output</legend>
     <div class = "aurebesh translation"> {{ ('\n' ~ basic_text) | wordwrap(11) }}</div>
 </fieldset>
 {% endblock %}
