--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
     <h1> Welcome to </h1>
     <h1>Chandrilla Star Line!</h1>
 
+    <!--CSL logo-->
     <img src="static/assets/CSLLogoW.png" class="logoI">
 
     <p> We are proud that our passengers come from all corners of the galaxy. To help them on their journey, it is our honor to provide this Aurebesh translator.</p>
