--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,12 +16,14 @@
     </head>
 
     <body>
+        <!--navbar-->
         <nav class="bg-dark navbar navbar-expand-md py-0 navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand mx-auto" href="/"><span>CSL Translat</span><span><img src="static/assets/CSLLogoW.png" class="logo"></span><span>r</span></a>
             </div>
         </nav>
 
+        <!--navigation buttina-->
         <div class="text-center">
             <div class="btn-group">
                 <a class="button" type="submit" href="/B2A">Basic to Aurebesh</a>
@@ -29,6 +31,7 @@
             </div> 
         </div>
 
+        <!--place for the other html pages to slot in-->
         <main class="container-fluid py-2 text-center">
             {% block main %}{% endblock %}
         </main>
