couple spacing changes

--- a/static/styles.css
+++ b/static/styles.css
@@ -18,7 +18,7 @@
 
 /*for the top nav button links*/
 .btn-group a {
-    padding: 3px 7px; /* Some padding */
+    padding: 3px 7px;
 }
 
 /*for the general design*/
